--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "firebase": "^10.11.1",
     "nuxt": "^3.10.3",
     "sass": "^1.72.0",
     "vue": "^3.4.21",
