feat: adição de mask

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "maska": "^2.1.11",
     "nuxt": "^3.10.3",
     "sass": "^1.72.0",
     "vue": "^3.4.21",
