fix: formatação de data e adição de sweetAlert

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "maska": "^2.1.11",
     "nuxt": "^3.10.3",
     "sass": "^1.72.0",
+    "sweetalert2": "^11.12.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
